--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "file-system": "^2.2.2",
     "inquirer": "^3.3.0",
     "node-spotify-api": "^1.0.7",
+    "request": "^2.83.0",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
